# morphologica_template

./: CMakeLists.txt  README.md  prog1.cpp
